Fixed: Bootstrap Affix Nav Causes Div Below To Jump Up

--- a/sites/all/themes/district_portal/less/header.less
+++ b/sites/all/themes/district_portal/less/header.less
@@ -26,6 +26,10 @@
   padding: @padding-base-horizontal;
 }
 
+.navbar-wrapper{
+  min-height: 60px;
+}
+
 #navbar.affix {
   top: 0;
   width: 100%;
